<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rekomendasi.RekomendasiActivity">

    <ImageView
        android:id="@+id/blob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/blob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_blob_2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_tambah"
        style="@style/text.medium"
        android:layout_margin="24dp"
        android:text="@string/hasil"
        android:textColor="@color/text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_penanda"
        style="@style/text.title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/nama_penanda"
        android:textColor="@color/text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambah" />

    <EditText
        android:id="@+id/et_penanda"
        style="@style/text.description"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/penanda_msg"
        android:background="@drawable/bg_edittext"
        android:hint="@string/penanda_msg"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_penanda"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_pilih_msg"
        style="@style/text.title"
        android:text="@string/pilih_msg"
        android:textColor="@color/text_main"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_penanda" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_rekomendasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pilih_msg"
        tools:listitem="@layout/item_plant" />

    <Button
        android:id="@+id/next_button"
        style="@style/text.title"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_next"
        android:drawableEnd="@drawable/ic_arrow"
        android:paddingEnd="8dp"
        android:text="@string/lanjut"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>