<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/stroke_secondary"
    android:layout_marginVertical="4dp"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_secondary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="16dp"
            android:src="@drawable/bunga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_penanda"
            style="@style/text.title"
            android:layout_marginStart="16dp"
            android:text="@string/nama_penanda"
            android:textColor="@color/text_main"
            app:layout_constraintBottom_toTopOf="@+id/tv_tanaman"
            app:layout_constraintStart_toEndOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/tv_tanaman"
            style="@style/text.italic"
            android:layout_marginStart="16dp"
            android:text="@string/nama_bunga"
            android:textColor="@color/text_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/text.description"
            android:layout_marginStart="16dp"
            android:text="@string/date_1"
            android:textColor="@color/text_main"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_tanaman" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/button"
            android:elevation="10dp"
            android:src="@drawable/ic_water"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>