<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/blob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/blob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_blob_2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_daftar"
        style="@style/text.big"
        android:textColor="@color/text_main"
        android:text="@string/daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/tv_msg_daftar"
        style="@style/text.subheader"
        android:textColor="@color/text_main"
        android:text="@string/daftar_msg_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daftar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/stroke_main"
        app:strokeWidth="1dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg_daftar">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/nama_anda"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/stroke_secondary"
            tools:ignore="RtlSymmetry,TextContrastCheck"/>

        <com.irfan.nanamyuk.ui.customview.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="72dp"
            android:paddingStart="16dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/email"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/stroke_secondary"
            tools:ignore="RtlSymmetry,TextContrastCheck"/>

        <com.irfan.nanamyuk.ui.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="128dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edittext"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/stroke_secondary"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text.header"
            android:stateListAnimator="@null"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_main"
            android:textAllCaps="false"
            android:text="@string/daftar"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_msg_cta"
        style="@style/text.subheader"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:text="@string/login_msg_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/accent_main"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text.header"
        android:textAllCaps="false"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_secondary"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@color/accent_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg_cta"
        tools:ignore="TextContrastCheck" />

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView2"-->
    <!--        android:layout_width="120dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="-8dp"-->
    <!--        android:contentDescription="@string/logo"-->
    <!--        android:src="@drawable/splash"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>