<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pilih.PilihActivity">

    <ImageView
        android:id="@+id/blob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/blob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_blob_2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_tambah"
        style="@style/text.medium"
        android:text="@string/pilih_tanaman"
        android:textColor="@color/text_main"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <androidx.appcompat.widget.SearchView-->
<!--        android:id="@+id/searchView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="44dp"-->
<!--        android:layout_marginHorizontal="24dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        app:iconifiedByDefault="false"-->
<!--        app:queryBackground="@android:color/transparent"-->
<!--        app:queryHint="@string/cari"-->
<!--        android:background="@drawable/bg_edittext"-->
<!--        app:submitBackground="@drawable/bg_edittext"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_tambah" />-->
    <TextView
        android:id="@+id/textView"
        style="@style/text.header"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/nama_penanda"
        android:textColor="@color/text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambah" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text.header"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/pilih_tanaman"
        android:textColor="@color/text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_penanda" />

    <TextView
        android:id="@+id/tv_rekom"
        style="@style/text.description"
        android:layout_marginStart="24dp"
        android:visibility="gone"
        android:text="Hasil Diurutkan berdasarkan Rekomendasi terbaik"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_plant"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="2dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rekom"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/tv_penanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/penanda_msg_2"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/stroke_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/next_button"
        style="@style/text.title"
        android:elevation="10dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_next"
        android:drawableEnd="@drawable/ic_arrow"
        android:paddingEnd="8dp"
        android:text="@string/lanjut"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progress"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:indeterminateTint="@color/accent_main"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:visibility="visible" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="70dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="https://assets5.lottiefiles.com/packages/lf20_r00ftt7a.json" />

    <TextView
        android:id="@+id/progress_text"
        style="@style/text.header"
        android:textColor="@color/accent_main"
        android:visibility="gone"
        android:layout_marginTop="-20dp"
        android:text="Menyiapkan Hasil Rekomendasi ..."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"/>

</androidx.constraintlayout.widget.ConstraintLayout>